k8s/app-be/02-datn-be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datn-be
  namespace: datn
spec:
  replicas: 1   # HPA sẽ override giá trị này
  selector:
    matchLabels:
      app: datn-be
  template:
    metadata:
      labels:
        app: datn-be
    spec:
      containers:
        - name: datn-be
          image: lvtdel/datn-be:latest
          ports:
            - containerPort: 300
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: firebase-config
              mountPath: /app/secrets
              readOnly: true
      volumes:
        - name: firebase-config
          secret:
            secretName: firebase-config-secret
