k8s/app-be/03-datn-be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datn-be
  namespace: datn
spec:
  selector:
    app: datn-be
  ports:
    - port: 300
      targetPort: 300
